--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="topbar">
       <div class="title-block">
         <h1>Workout Tracker</h1>
-        <div class="subtitle">for your healthy life</div>
+        <div class="subtitle">for your health</div>
       </div>
 
       <!-- Hamburger -->
