--- a/index.html
+++ b/index.html
@@ -127,5 +127,11 @@
     </main>
 
 <script type="module" src="./app.js?v=3"></script>
+.item {
+  background: rgba(12, 25, 45, 0.20);   /* more transparent */
+  backdrop-filter: blur(18px);          /* stronger blur */
+  -webkit-backdrop-filter: blur(18px);
+  border-color: rgba(255,255,255,0.08);
+}
   </body>
 </html>
