--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
 
         <!-- Templates -->
-        <div class="panel" id="tab-templates">
+<div class="panel hidden" id="tab-templates">
           <h2>Programs</h2>
 
           <div class="row">
@@ -73,7 +73,8 @@
         </div>
 
         <!-- Workout -->
-        <div class="panel hidden" id="tab-workout">
+<div class="panel" id="tab-workout">
+
           <h2>Start workout</h2>
           <!-- Start controls: keep dropdown left, Start button right (especially on mobile) -->
           <div class="row start-row">
