--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
 
-  <body>
+<body class="app-loading">
     <header class="topbar">
       <div class="title-block">
         <h1>Workout Tracker</h1>
@@ -36,7 +36,8 @@
 
     <main>
       <!-- AUTH -->
-      <section id="authSection" class="card">
+<section id="authSection" class="card hidden">
+
         <h2>Sign in</h2>
         <div class="grid">
           <input id="email" type="email" placeholder="Email" autocomplete="email" />
