--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Workout Tracker</title>
-    <link rel="stylesheet" href="./styles.css" />
+<link rel="stylesheet" href="./styles.css?v=999" />
   </head>
 
 <body class="app-loading">
@@ -128,7 +128,7 @@
         </div>
       </section>
     </main>
-<script type="module" src="./app.js?v=3"></script>
+<script type="module" src="./app.js?v=999"></script>
 
   </body>
 </html>
